[package]
name = "glslt"
version = "0.5.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
description = "GLSLT Template compiler library"
edition = "2018"
license = "MIT"
homepage = "https://github.com/vtavernier/glslt"
documentation = "https://vtavernier.github.io/glslt/glslt/"
repository = "https://github.com/vtavernier/glslt.git"
readme = "README.md"
keywords = ["glslt", "glsl", "language", "parser", "template"]
categories = ["parser-implementations", "rendering"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
glsl-lang = { version = "0.2.0", features = ["lexer-v2"], default-features = false }
glsl-lang-pp = "0.2.0"
lang-util = "0.2.0"

thiserror = "1.0"
sha-1 = "0.9"
petgraph = "0.6"
bimap = "0.6"
log = "0.4"
indexmap = "1.7"
derive_builder = "0.10"

[dependencies.pyo3]
version = "0.14"
features = [ "extension-module" ]
optional = true

[dependencies.structopt]
version = "0.3"
optional = true

[dependencies.env_logger]
version = "0.9"
optional = true

[features]
python = ["pyo3", "cli"]
cli = ["structopt", "env_logger"]

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "0.6"

[package.metadata.maturin.scripts]
glsltc = "glslt:main"
