[package]
name = "glslt"
version = "0.6.2"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
description = "GLSLT Template compiler library"
edition = "2018"
license = "MIT"
homepage = "https://github.com/vtavernier/glslt"
documentation = "https://vtavernier.github.io/glslt/glslt/"
repository = "https://github.com/vtavernier/glslt.git"
readme = "README.md"
keywords = ["glslt", "glsl", "language", "parser", "template"]
categories = ["parser-implementations", "rendering"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
glsl-lang = "0.2.0"
glsl-lang-pp = { version = "0.2.0", optional = true }
lang-util = "0.2.0"

thiserror = "1.0"
sha-1 = "0.10"
petgraph = "0.6"
bimap = "0.6"
log = "0.4"
indexmap = { version = "1.8", features = ["std"] }

[dependencies.pyo3]
version = "0.15"
features = [ "extension-module" ]
optional = true

[dependencies.structopt]
version = "0.3"
optional = true

[dependencies.env_logger]
version = "0.9"
optional = true

[features]
python = ["pyo3", "cli"]
cli = ["structopt", "env_logger", "glsl-lang-pp", "glsl-lang/lexer-v2-full"]

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "1.1"
