[package]
name = "glslt"
version = "0.7.5"
authors = ["Alixinne <alixinne@pm.me>"]
description = "GLSLT Template compiler library"
edition = "2018"
license = "MIT"
homepage = "https://github.com/alixinne/glslt"
documentation = "https://alixinne.github.io/glslt/glslt/"
repository = "https://github.com/alixinne/glslt.git"
readme = "README.md"
keywords = ["glslt", "glsl", "language", "parser", "template"]
categories = ["parser-implementations", "rendering"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
glsl-lang = "0.8.0"
glsl-lang-pp = { version = "0.8.0", optional = true }
lang-util = "0.8.0"

thiserror = "2.0"
sha-1 = "0.10"
petgraph = "0.8"
bimap = "0.6"
log = "0.4"
indexmap = { version = "2.2", features = ["std"] }

[dependencies.pyo3]
version = "0.25"
features = [ "extension-module" ]
optional = true

[dependencies.clap]
version = "4"
optional = true
features = ["derive"]

[dependencies.env_logger]
version = "0.11"
optional = true

[features]
python = ["pyo3", "cli"]
cli = ["clap", "env_logger", "parse"]
parse = ["glsl-lang-pp/full", "glsl-lang/lexer-full"]

[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1.4"
