[package]
name = "glslt_cli"
version = "0.6.4"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
description = "GLSLT Template compiler library"
edition = "2018"
license = "MIT"
homepage = "https://github.com/vtavernier/glslt"
documentation = "https://vtavernier.github.io/glslt/glsltc/"
repository = "https://github.com/vtavernier/glslt.git"
readme = "README.md"
keywords = ["glslt", "glsl", "language", "parser", "template"]
categories = ["command-line-interface", "parser-implementations", "rendering"]

[[bin]]
name = "glsltc"
path = "src/main.rs"

[dependencies]
glslt = { version = "0.6.3", features = ["cli"] }

anyhow = "1.0"
