[package]
name = "glslt_cli"
version = "0.7.3"
authors = ["Alixinne <alixinne@pm.me>"]
description = "GLSLT Template compiler library"
edition = "2018"
license = "MIT"
homepage = "https://github.com/alixinne/glslt"
documentation = "https://alixinne.github.io/glslt/glsltc/"
repository = "https://github.com/alixinne/glslt.git"
readme = "README.md"
keywords = ["glslt", "glsl", "language", "parser", "template"]
categories = ["command-line-interface", "parser-implementations", "rendering"]

[[bin]]
name = "glsltc"
path = "src/main.rs"

[dependencies]
glslt = { version = "0.7.3", features = ["cli"] }

anyhow = "1.0"
